displaying all requests in a map

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify/icons-mdi": "^1.1.41",
+    "@iconify/react": "^3.1.0",
     "@react-google-maps/api": "^1.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
     "dotenv": "^9.0.2",
+    "google-map-react": "^2.1.10",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^16.13.1",
